[gd_scene load_steps=5 format=3 uid="uid://bpr3pdnryl2hv"]

[ext_resource type="Script" uid="uid://do7dppstw44e1" path="res://Script/pause_ui.gd" id="1_26smx"]
[ext_resource type="Texture2D" uid="uid://dnv6ep53hkx7" path="res://Sprite/S_Button1.png" id="3_1fxdr"]
[ext_resource type="Script" uid="uid://cqoq8ogtcbspm" path="res://Script/button.gd" id="4_31wmi"]
[ext_resource type="Theme" uid="uid://b6yfl8n2aao2j" path="res://Theme/theme1.tres" id="5_dfwql"]

[node name="PauseUI" type="Node2D"]
process_mode = 3
script = ExtResource("1_26smx")
metadata/_edit_group_ = true

[node name="PauseOverlay" type="CanvasLayer" parent="."]
process_mode = 2

[node name="ColorRect" type="ColorRect" parent="PauseOverlay"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.23529412)

[node name="StartTexture" type="TextureRect" parent="PauseOverlay"]
offset_left = 362.0
offset_top = 418.0
offset_right = 1898.0
offset_bottom = 1442.0
scale = Vector2(0.37051237, 0.25815007)
texture = ExtResource("3_1fxdr")

[node name="StartButton" type="Button" parent="PauseOverlay/StartTexture"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 223.90102
offset_top = 289.76523
offset_right = 223.901
offset_bottom = 289.76526
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7091894, 0.44424036)
script = ExtResource("4_31wmi")

[node name="Label" type="Label" parent="PauseOverlay/StartTexture/StartButton"]
layout_mode = 0
offset_left = -3.646246
offset_top = 54.03772
offset_right = 444.3537
offset_bottom = 118.03775
scale = Vector2(3.4655817, 9.091362)
theme = ExtResource("5_dfwql")
text = "ReStart"
horizontal_alignment = 1

[node name="ExitTexture" type="TextureRect" parent="PauseOverlay"]
offset_left = 1026.0
offset_top = 406.0
offset_right = 2562.0
offset_bottom = 1430.0
scale = Vector2(0.37051237, 0.25815007)
texture = ExtResource("3_1fxdr")

[node name="ExitButton" type="Button" parent="PauseOverlay/ExitTexture"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 223.90102
offset_top = 289.76523
offset_right = 223.901
offset_bottom = 289.76526
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7091894, 0.44424036)
script = ExtResource("4_31wmi")

[node name="Label" type="Label" parent="PauseOverlay/ExitTexture/ExitButton"]
layout_mode = 0
offset_left = 91.49637
offset_top = 45.317886
offset_right = 411.4964
offset_bottom = 109.3179
scale = Vector2(4.4693646, 11.724615)
theme = ExtResource("5_dfwql")
text = "Title"
horizontal_alignment = 1

[connection signal="pressed" from="PauseOverlay/StartTexture/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="PauseOverlay/ExitTexture/ExitButton" to="." method="_on_exit_button_pressed"]
